--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ before_install:
   - chmod 600 .netrc
   - chmod +x clean.sh
   - chmod +x test.sh
-
+before_script:
+  - psql -c "CREATE DATABASE your_database;" -U postgres
+  - psql -c "CREATE USER your_username WITH PASSWORD 'your_password';" -U postgres
 script:
   - ./clean.sh
   - ./test.sh
