Fixes comma in config

--- a/_config_files/config.development.json
+++ b/_config_files/config.development.json
@@ -12,7 +12,7 @@
 
     "logging": {
         "outputFile": "master_dev_logs.log",
-        "localFile": "_dev.log",
+        "localFile": "_dev.log"
     },
 
     "directory": {
